examples/test/testpolicy1959.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1959
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key27: value33
      key13: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value14
      podSelector:
        matchLabels:
          key41: value43
          key29: value49
          key21: value40
